Updated the logic for managing academic years.